--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <h2 class="name">RAHUL KUMAR GUPTA</h2>
             <p class="about-me">CODER||WEB DEVELOPER</p>
             
-        <a href="https://www.instagram.com/accounts/onetap/?next=%2F&hl=en" target="_blank"><i class="fa fa-instagram"></i></a>
+        <a href="https://www.instagram.com/rahul88bt" target="_blank"><i class="fa fa-instagram"></i></a>
             <a href="http://www.linkedin.com/in/rahul-gupta-21a7571b3/" target="_blank"><i class="fa fa-linkedin"></i></a>
-            <a href="https://github.com/rahul88bt/xah_lee" target="_blank"><i class="fa fa-github"></i></a>
-            <a href="http://twitter.com/@Rahul13725247" target="_blank"><i class="fa fa-twitter"></i></a>
+            <a href="https://github.com/rahul88bt/" target="_blank"><i class="fa fa-github"></i></a>
+            <a href="http://twitter.com/Rahul13725247" target="_blank"><i class="fa fa-twitter"></i></a>
            <a href="https://www.facebook.com/profile.php?id=100023136316671" target="_blank"><i class="fa fa-facebook"></i></a>
         </div>
         <div class="about">
@@ -72,10 +72,10 @@
             <input type="text" class="email form" placeholder="Enter your e-mail id"><br>
             <button class="btn form">Submmit</button>
         </div>
-        <a href="https://www.instagram.com/accounts/onetap/?next=%2F&hl=en" target="_blank"><i class="c fa fa-instagram"></i></a>
+        <a href="https://www.instagram.com/rahul88bt" target="_blank"><i class="c fa fa-instagram"></i></a>
         <a href="http://www.linkedin.com/in/rahul-gupta-21a7571b3/" target="_blank"><i class="c fa fa-linkedin"></i></a>
-        <a href="https://github.com/rahul88bt/xah_lee" target="_blank"><i class="c fa fa-github"></i></a>
-        <a href="http://twitter.com/@Rahul13725247" target="_blank"><i class="c fa fa-twitter"></i></a>
+        <a href="https://github.com/rahul88bt/" target="_blank"><i class="c fa fa-github"></i></a>
+        <a href="http://twitter.com/Rahul13725247" target="_blank"><i class="c fa fa-twitter"></i></a>
        <a href="https://www.facebook.com/profile.php?id=100023136316671" target="_blank"><i class="c fa fa-facebook"></i></a>
     </div>
     </body>
