--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
                 <img src="r1.jpg" alt="loading DP"></div>
             <h2 class="name">RAHUL KUMAR GUPTA</h2>
             <p class="about-me">CODER||WEB DEVELOPER</p>
+            <div class="link">
+             <a href="https://www.instagram.com/rahul88bt" target="_blank"><i class="c fa fa-instagram"></i></a>
+            <a href="http://www.linkedin.com/in/rahul-gupta-21a7571b3/" target="_blank"><i
+                    class="c fa fa-linkedin"></i></a>
+            <a href="https://github.com/rahul88bt/" target="_blank"><i class="c fa fa-github"></i></a>
+            <a href="http://twitter.com/Rahul13725247" target="_blank"><i class="c fa fa-twitter"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100023136316671" target="_blank"><i
+                    class="c fa fa-facebook"></i></a>
+            </div>
 
             
         </div>
@@ -46,6 +55,7 @@
                     And now i study in Galgotias University.</p>
             </div>
         </div>
+ 
         <div class="skill" id="skills">
             <h2 class="skills-s s">SKILLS</h2>
             <div class="web s">
