--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
             <a href="https://www.facebook.com/profile.php?id=100023136316671" target="_blank"><i
                     class="c fa fa-facebook"></i></a>
         </div>
+        <div class="last-section">
+         copyright &copy; 2027 www.guptarahul.com-All rights reserved
+        </div>
     </body>
 
 </html>
