--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     class="c fa fa-facebook"></i></a>
         </div>
         <div class="last-section">
-         copyright &copy; 2027 www.guptarahul.com-All rights reserved
+            <p class="foot">copyright &copy; 2027 www.guptarahul.com-All rights reserved</p>
         </div>
     </body>
 
